# dotnet-monitor

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  Directory.Build.props  Directory.Packages.props  NuGet.config  README.md  Restore.cmd  SECURITY.md  THIRD-PARTY-NOTICES.TXT  Test.cmd  build.sh  components.cmake  cspell.json  dotnet-monitor-codeql.yml  dotnet-monitor.sln  dotnet-monitor.yml  es-metadata.yml  gen.sh  generate-dev-sln.ps1  global.json  startvs.cmd  startvscode.cmd  startvscode.sh  test-otel-config.json  test.sh  xunit.runner.json
.config/: dotnet-tools.json  tsaoptions.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  copilot-instructions.md  dependabot.template.yml  dependabot.yml  fabricbot.json  learning-path-sha  learning-path-sha.txt  pull_request_template.md  releases.json
MSBuild_Logs/: MSBuild_pid-19112_948141708ef1403d9931f4fcd496af7f.failure.txt
documentation/: README.md  ReleaseNotes.md  api-key-format.md  api-key-setup.md  authentication.md  building.md  collectionruleexamples.md  collectionrules.md  configuration.md  dashboardtemplate_19297.json  dashboardtemplate_19297_rev1.json  docker-compose.md  docker.md  egress-extensibility.md  egress.md  experimental.md  kubernetes.md  localmachine.md  official-build-instructions.md  openapi.json  openapi.md  release-process.md  releases.md  schema.json  security-considerations.md  setup.md  swagger-ui.md  thisisatest.md  troubleshooting.md  videos-and-tutorials.md
eng/: AfterSolutionBuild.targets  Analyzers.props  AzureBlobStorageProjectToPublish.props  Build-Native.cmd  Build.props  CodeAnalysis.globalconfig  Common.props  DotnetMonitorProjectToPublish.props  Helix.Common.props  Helix.CrossTarget.targets  Helix.SingleTarget.targets  Helix.props  (+23 more)
src/MonitorProfiler/: CMakeLists.txt  ClassFactory.cpp  ClassFactory.h  DllMain.cpp  MonitorProfiler.def  ProfilerBase.cpp  ProfilerBase.h
src/MonitorProfiler/Communication/: CommandServer.cpp  CommandServer.h  IpcCommClient.cpp  IpcCommClient.h  IpcCommServer.cpp  IpcCommServer.h  Messages.h  SocketWrapper.h
src/MonitorProfiler/Environment/: Environment.h  EnvironmentHelper.cpp  EnvironmentHelper.h  ProfilerEnvironment.cpp  ProfilerEnvironment.h  StartupEnvironmentUtilities.cpp  StartupEnvironmentUtilities.h
src/MonitorProfiler/EventProvider/: EventTypeMapping.cpp  EventTypeMapping.h  ProfilerEvent.h  ProfilerEventProvider.cpp  ProfilerEventProvider.h
src/MonitorProfiler/Logging/: AggregateLogger.cpp  AggregateLogger.h  DebugLogger.cpp  DebugLogger.h  LogLevelHelper.h  Logger.cpp  Logger.h  LoggerHelper.cpp  LoggerHelper.h  NullLogger.cpp  NullLogger.h  StdErrLogger.cpp  StdErrLogger.h
src/MonitorProfiler/MainProfiler/: ExceptionTracker.cpp  ExceptionTracker.h  MainProfiler.cpp  MainProfiler.h  ThreadData.cpp  ThreadData.h  ThreadDataManager.cpp  ThreadDataManager.h
src/MonitorProfiler/ProbeInstrumentation/: AssemblyProbePrep.cpp  AssemblyProbePrep.h  CallbackDefinitions.h  ProbeInjector.cpp  ProbeInjector.h  ProbeInstrumentation.cpp  ProbeInstrumentation.h
src/MonitorProfiler/Stacks/: Stack.h  StackSampler.cpp  StackSampler.h  StacksEventProvider.cpp  StacksEventProvider.h
src/MonitorProfiler/Utilities/: BlockingQueue.h  ClrData.h  ILRewriter.cpp  ILRewriter.h  MemoryUtilities.h  NameCache.cpp  NameCache.h  OomUtilities.h  PairHash.h  StringUtilities.h  ThreadNameCache.cpp  ThreadNameCache.h  ThreadUtilities.cpp  ThreadUtilities.h  TypeNameUtilities.cpp  TypeNameUtilities.h
src/Profilers/CommonMonitorProfiler/: CMakeLists.txt  ProfilerBase.cpp  ProfilerBase.h
src/Profilers/CommonMonitorProfiler/CommonUtilities/: ClrData.h  GuidHashCompare.h  MetadataEnumCloser.h  NameCache.cpp  NameCache.h  RuntimeUtilities.h  ThreadNameCache.cpp  ThreadNameCache.h  ThreadUtilities.cpp  TypeNameUtilities.cpp  TypeNameUtilities.h
src/Profilers/CommonMonitorProfiler/Environment/: Environment.h  EnvironmentHelper.cpp  EnvironmentHelper.h  ProfilerEnvironment.cpp  ProfilerEnvironment.h
src/Profilers/CommonMonitorProfiler/EventProvider/: EventTypeMapping.h  ProfilerEvent.h  ProfilerEventProvider.cpp
src/Profilers/CommonMonitorProfiler/Logging/: AggregateLogger.h  LogLevelHelper.h  Logger.cpp  Logger.h  LoggerFactory.h  LoggerHelper.cpp  LoggerHelper.h  StdErrLogger.h
src/Profilers/CommonMonitorProfiler/Utilities/: BlockingQueue.h  StringUtilities.h
src/Profilers/MonitorProfiler/: CMakeLists.txt  ClassFactory.cpp  MonitorProfiler.def
src/Profilers/MonitorProfiler/Communication/: CommandServer.cpp  CommandServer.h  IpcCommClient.cpp  IpcCommClient.h  IpcCommServer.cpp  IpcCommServer.h  ManagedMessageCallbackManager.cpp  ManagedMessageCallbackManager.h  MessageCallbackManager.cpp  MessageCallbackManager.h  MessageDemuxer.cpp  MessageDemuxer.h  Messages.h  SocketWrapper.h
src/Profilers/MonitorProfiler/MainProfiler/: ExceptionTracker.cpp  ExceptionTracker.h  MainProfiler.cpp  MainProfiler.h  ManagedMessageCallbackLookup.cpp  ManagedMessageCallbackLookup.h  ThreadData.h  ThreadDataManager.h
src/Profilers/MonitorProfiler/Stacks/: Stack.h  StackSampler.cpp  StackSampler.h  StacksEventProvider.cpp  StacksEventProvider.h
src/Profilers/MutatingMonitorProfiler/: CMakeLists.txt  ClassFactory.cpp  DllMain.cpp  MutatingMonitorProfiler.cpp  MutatingMonitorProfiler.def  MutatingMonitorProfiler.h
src/Profilers/MutatingMonitorProfiler/ProbeInstrumentation/: AssemblyProbePrep.cpp  AssemblyProbePrep.h  ProbeInjector.cpp  ProbeInjector.h  ProbeInstrumentation.cpp  ProbeInstrumentation.h
src/Profilers/MutatingMonitorProfiler/Utilities/: ILRewriter.cpp  ILRewriter.h
src/Profilers/Shared/: CMakeLists.txt
src/Profilers/Shared/Environment/: EnvironmentHelper.h
src/Profilers/Shared/Logging/: DebugLogger.cpp  NullLogger.cpp
src/Profilers/Shared/Utilities/: NameCache.cpp
src/Tests/TestProfiler/: CMakeLists.txt  ClassFactory.cpp  DllMain.cpp  ProfilerBase.cpp  ProfilerBase.h  TestProfiler.def
src/Tests/TestProfiler/EnvProfiler/: EnvProfiler.cpp  EnvProfiler.h
(+2359 files in other folders)
